[FIX] slim scrollbar

--- a/web/src/less/view.css
+++ b/web/src/less/view.css
@@ -37,3 +37,7 @@
 .jenkinsbo .pipeline-big-label  {
 	font-size: 0.8rem;
 }
+
+.sapUiLoSplitterContent {
+	overflow: hidden !important;
+}
